lstm solution, end day 1

--- a/sol2.ipynb
+++ b/sol2.ipynb
@@ -277,12 +277,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-21T00:25:50.103659Z",
-     "start_time": "2025-04-21T00:25:50.014702Z"
+     "end_time": "2025-04-21T00:45:42.531557Z",
+     "start_time": "2025-04-21T00:45:42.522068Z"
     }
    },
    "id": "4d68034c165292c5",
-   "execution_count": 20
+   "execution_count": 32
   },
   {
    "cell_type": "code",
@@ -317,12 +317,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-21T00:25:53.569418Z",
-     "start_time": "2025-04-21T00:25:53.567622Z"
+     "end_time": "2025-04-21T00:45:47.149075Z",
+     "start_time": "2025-04-21T00:45:47.138435Z"
     }
    },
    "id": "e3d667b335d4a0a",
-   "execution_count": 21
+   "execution_count": 33
   },
   {
    "cell_type": "code",
@@ -334,52 +334,52 @@
       "Training with 10000 valid scenarios\n",
       "Input shape: (10000, 50, 6), Output shape: (10000, 60, 2)\n",
       "\n",
-      "--- Phase 1: Training with Huber loss ---\n",
+      "--- Phase 1: Training with MSE loss ---\n",
       "\n",
       "Epoch 1/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m24s\u001B[0m 91ms/step - loss: 9.7306 - val_loss: 9.2787 - learning_rate: 0.0100\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m24s\u001B[0m 89ms/step - loss: 306.6404 - val_loss: 299.2356 - learning_rate: 0.0010\n",
       "Epoch 2/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m26s\u001B[0m 102ms/step - loss: 9.5527 - val_loss: 9.2788 - learning_rate: 0.0100\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 78ms/step - loss: 311.1894 - val_loss: 300.2249 - learning_rate: 0.0010\n",
       "Epoch 3/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 90ms/step - loss: 9.6450 - val_loss: 9.2787 - learning_rate: 0.0100\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 80ms/step - loss: 306.0849 - val_loss: 299.7749 - learning_rate: 0.0010\n",
       "Epoch 4/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m25s\u001B[0m 100ms/step - loss: 9.5809 - val_loss: 9.3047 - learning_rate: 0.0100\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 78ms/step - loss: 305.3625 - val_loss: 299.4061 - learning_rate: 0.0010\n",
       "Epoch 5/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m24s\u001B[0m 94ms/step - loss: 9.6332 - val_loss: 9.2785 - learning_rate: 0.0100\n",
-      "Learning rate update: 0.008999999798834325\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 79ms/step - loss: 311.7813 - val_loss: 298.8052 - learning_rate: 0.0010\n",
+      "Learning rate update: 0.0009000000427477062\n",
       "Epoch 6/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 94ms/step - loss: 9.5290 - val_loss: 9.2792 - learning_rate: 0.0090\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 79ms/step - loss: 312.3368 - val_loss: 298.9164 - learning_rate: 9.0000e-04\n",
       "Epoch 7/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 89ms/step - loss: 9.3877 - val_loss: 9.2788 - learning_rate: 0.0090\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m20s\u001B[0m 78ms/step - loss: 303.5800 - val_loss: 298.8947 - learning_rate: 9.0000e-04\n",
       "Epoch 8/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m21s\u001B[0m 86ms/step - loss: 9.6329 - val_loss: 9.2783 - learning_rate: 0.0090\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 91ms/step - loss: 308.0500 - val_loss: 299.2807 - learning_rate: 9.0000e-04\n",
       "Epoch 9/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 92ms/step - loss: 9.5725 - val_loss: 9.2784 - learning_rate: 0.0090\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m21s\u001B[0m 86ms/step - loss: 313.0565 - val_loss: 298.6037 - learning_rate: 9.0000e-04\n",
       "Epoch 10/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 88ms/step - loss: 9.7252 - val_loss: 9.2798 - learning_rate: 0.0090\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m21s\u001B[0m 83ms/step - loss: 307.5234 - val_loss: 300.1372 - learning_rate: 9.0000e-04\n",
       "\n",
       "--- Phase 2: Fine-tuning with MSE loss ---\n",
       "Epoch 1/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 82ms/step - loss: 309.6442 - val_loss: 299.5163 - learning_rate: 1.0000e-04\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 88ms/step - loss: 305.6513 - val_loss: 298.1433 - learning_rate: 1.0000e-04\n",
       "Epoch 2/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 87ms/step - loss: 312.1733 - val_loss: 299.5144 - learning_rate: 1.0000e-04\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 92ms/step - loss: 308.2555 - val_loss: 296.5061 - learning_rate: 1.0000e-04\n",
       "Epoch 3/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m21s\u001B[0m 84ms/step - loss: 315.4665 - val_loss: 299.4946 - learning_rate: 1.0000e-04\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 90ms/step - loss: 305.7632 - val_loss: 293.9901 - learning_rate: 1.0000e-04\n",
       "Epoch 4/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 93ms/step - loss: 309.3809 - val_loss: 299.4539 - learning_rate: 1.0000e-04\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 90ms/step - loss: 301.6640 - val_loss: 291.5877 - learning_rate: 1.0000e-04\n",
       "Epoch 5/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m24s\u001B[0m 96ms/step - loss: 308.0648 - val_loss: 299.4585 - learning_rate: 1.0000e-04\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m24s\u001B[0m 94ms/step - loss: 296.0306 - val_loss: 290.4300 - learning_rate: 1.0000e-04\n",
       "Learning rate update: 8.999999772640876e-05\n",
       "Epoch 6/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 89ms/step - loss: 304.2874 - val_loss: 299.4493 - learning_rate: 9.0000e-05\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 89ms/step - loss: 303.0773 - val_loss: 287.8217 - learning_rate: 9.0000e-05\n",
       "Epoch 7/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 88ms/step - loss: 304.9165 - val_loss: 299.4245 - learning_rate: 9.0000e-05\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m22s\u001B[0m 89ms/step - loss: 297.6008 - val_loss: 286.9978 - learning_rate: 9.0000e-05\n",
       "Epoch 8/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m28s\u001B[0m 111ms/step - loss: 308.0185 - val_loss: 299.4318 - learning_rate: 9.0000e-05\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m28s\u001B[0m 113ms/step - loss: 286.0911 - val_loss: 282.5307 - learning_rate: 9.0000e-05\n",
       "Epoch 9/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m25s\u001B[0m 99ms/step - loss: 309.6598 - val_loss: 299.4288 - learning_rate: 9.0000e-05\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m25s\u001B[0m 101ms/step - loss: 289.9905 - val_loss: 284.4885 - learning_rate: 9.0000e-05\n",
       "Epoch 10/10\n",
-      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m23s\u001B[0m 92ms/step - loss: 312.2578 - val_loss: 299.4923 - learning_rate: 9.0000e-05\n",
+      "\u001B[1m250/250\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m25s\u001B[0m 98ms/step - loss: 286.6205 - val_loss: 280.8253 - learning_rate: 9.0000e-05\n",
       "Model saved to lstm_1.pkl\n"
      ]
     }
@@ -394,12 +394,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-21T00:33:41.957818Z",
-     "start_time": "2025-04-21T00:25:54.009598Z"
+     "end_time": "2025-04-21T00:53:20.270654Z",
+     "start_time": "2025-04-21T00:45:52.049407Z"
     }
    },
    "id": "3338be4ed075b368",
-   "execution_count": 22
+   "execution_count": 34
   },
   {
    "cell_type": "code",
@@ -564,7 +564,7 @@
     "Tobs = 50\n",
     "Tpred = 60\n",
     "\n",
-    "data = train_data[5]\n",
+    "data = train_data[10]\n",
     "\n",
     "# Select a test scenario (can use any valid index)\n",
     "test_scenario = data.copy()  # shape (agents, time_steps, features)\n",
@@ -587,12 +587,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-04-21T00:42:13.077517Z",
-     "start_time": "2025-04-21T00:42:04.592854Z"
+     "end_time": "2025-04-21T00:56:04.262833Z",
+     "start_time": "2025-04-21T00:55:52.694488Z"
     }
    },
    "id": "5a5f4cc76c3c72d3",
-   "execution_count": 31
+   "execution_count": 36
   },
   {
    "cell_type": "code",
