LSTM MODEL 2nd on Leaderboard (proper submission and trained well)

--- a/lstm1.ipynb
+++ b/lstm1.ipynb
@@ -758,7 +758,18 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wv/j6ybhf8906j4bmnp171wtn680000gn/T/ipykernel_5303/3735350324.py:9: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "  cmap1 = plt.cm.get_cmap('viridis', 50)\n",
+      "/var/folders/wv/j6ybhf8906j4bmnp171wtn680000gn/T/ipykernel_5303/3735350324.py:10: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "  cmap2 = plt.cm.get_cmap('plasma', 50)\n"
+     ]
+    }
+   ],
    "source": [
     "# visualize prediction\n",
     "\n",
@@ -768,7 +779,7 @@
     "Tobs = 50\n",
     "Tpred = 60\n",
     "\n",
-    "data = train_data[250]\n",
+    "data = train_data[5000]\n",
     "\n",
     "# Select a test scenario (can use any valid index)\n",
     "test_scenario = data.copy()  # shape (agents, time_steps, features)\n",
@@ -791,12 +802,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-02T18:40:19.512584Z",
-     "start_time": "2025-05-02T18:40:19.510999Z"
+     "end_time": "2025-05-03T01:00:46.798817Z",
+     "start_time": "2025-05-03T01:00:35.906297Z"
     }
    },
    "id": "5a5f4cc76c3c72d3",
-   "execution_count": null
+   "execution_count": 84
   },
   {
    "cell_type": "code",
@@ -1289,15 +1300,56 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-05-02T18:40:19.508362Z"
+     "end_time": "2025-05-03T01:01:38.098690Z",
+     "start_time": "2025-05-03T01:01:38.097196Z"
     }
    },
    "id": "e8bf6a02ebcd4b24",
-   "execution_count": null
+   "execution_count": 85
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating 10000 scenarios...\n",
+      "Processing scenario 1/10000 (0.0%)\n",
+      "  Current scenario MSE: 0.3357\n",
+      "Processing scenario 1001/10000 (10.0%)\n",
+      "  Current scenario MSE: 2.8752\n",
+      "Processing scenario 2001/10000 (20.0%)\n",
+      "  Current scenario MSE: 0.6765\n",
+      "Processing scenario 3001/10000 (30.0%)\n",
+      "  Current scenario MSE: 0.3239\n",
+      "Processing scenario 4001/10000 (40.0%)\n",
+      "  Current scenario MSE: 0.0279\n",
+      "Processing scenario 5001/10000 (50.0%)\n",
+      "  Current scenario MSE: 6.1460\n",
+      "Processing scenario 6001/10000 (60.0%)\n",
+      "  Current scenario MSE: 68.8752\n",
+      "Processing scenario 7001/10000 (70.0%)\n",
+      "  Current scenario MSE: 1.5870\n",
+      "Processing scenario 8001/10000 (80.0%)\n",
+      "  Current scenario MSE: 3.0096\n",
+      "Processing scenario 9001/10000 (90.0%)\n",
+      "  Current scenario MSE: 0.7343\n",
+      "Processing scenario 10000/10000 (100.0%)\n",
+      "Evaluation complete: 10000 valid scenarios\n",
+      "Mean Squared Error (MSE): 7.7515\n",
+      "Min MSE: 0.0177, Max MSE: 223.4865\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "np.float64(7.751465753722418)"
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Evaluate on training data\n",
     "evaluate_mse(train_data, model)"
@@ -1305,11 +1357,73 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-05-02T18:40:19.511107Z"
+     "end_time": "2025-05-03T01:12:28.986816Z",
+     "start_time": "2025-05-03T01:04:00.357291Z"
     }
    },
    "id": "6ae1b88910d7e8bb",
-   "execution_count": null
+   "execution_count": 89
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission file 'lstm_submission.csv' saved with shape (126000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def generate_submission(data, output_csv, Tobs=50, Tpred=60):\n",
+    "    \"\"\"\n",
+    "    Applies forecasting and generates a submission CSV with format:\n",
+    "    index,x,y where index is auto-generated and matches submission key.\n",
+    "    \n",
+    "    Args:\n",
+    "        data (np.ndarray): Test data of shape (num_scenarios, 50, 50, 6).\n",
+    "        output_csv (str): Output CSV file path.\n",
+    "        Tobs (int): Observed time steps (default 50).\n",
+    "        Tpred (int): Prediction time steps (default 60).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    predictions = []\n",
+    "\n",
+    "    for i in range(data.shape[0]):\n",
+    "        scenario_data = data[i]            # Shape: (50, 50, 6)\n",
+    "        ego_agent_data = scenario_data[0]  # Shape: (50, 6)\n",
+    "\n",
+    "        # Predict future positions for the ego agent\n",
+    "        predicted_positions = forecast_positions(\n",
+    "            ego_agent_data[np.newaxis, :, :], Tobs, Tpred, model, X_mean, X_std, y_mean, y_std\n",
+    "        )  # Shape: (1, 60, 2)\n",
+    "\n",
+    "        # Append 60 predictions (x, y) for this scenario\n",
+    "        predictions.extend(predicted_positions[0])  # Shape: (60, 2)\n",
+    "\n",
+    "    # Create DataFrame without explicit ID\n",
+    "    submission_df = pd.DataFrame(predictions, columns=[\"x\", \"y\"])\n",
+    "    submission_df.index.name = 'index'  # Match Kaggle format\n",
+    "\n",
+    "    # Save CSV with index\n",
+    "    submission_df.to_csv(output_csv)\n",
+    "    print(f\"Submission file '{output_csv}' saved with shape {submission_df.shape}\")\n",
+    "\n",
+    "generate_submission(test_data, 'lstm_submission.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-05-03T06:16:59.708670Z",
+     "start_time": "2025-05-03T06:15:13.300547Z"
+    }
+   },
+   "id": "bbc4fc43197afaf",
+   "execution_count": 93
   },
   {
    "cell_type": "code",
@@ -1318,7 +1432,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "bbc4fc43197afaf"
+   "id": "94a6d7a17d8677e1"
   }
  ],
  "metadata": {
